[package]
name = "rustwall"
version = "0.1.0"
edition = "2024"
authors = ["austin@songer.me"]
description = "Advanced Rust-based firewall and security system with DDoS protection, CAPTCHA verification, and specialized Tor network security features"
documentation = "https://docs.rs/rustwall"
homepage = "https://github.com/austinsonger/rustwall"
repository = "https://github.com/austinsonger/rustwall"
license = "MIT"
readme = "README.md"
keywords = ["security", "ddos", "captcha", "privacy", "anonymity"]
categories = ["network-programming", "web-programming", "cryptography", "authentication"]
exclude = [
    "/.github/",
    "/docs/",
    "/examples/",
    "/.gitignore",
    "/TODO.md"
]

[lib]
name = "rustwall"
path = "src/lib.rs"

[[bin]]
name = "rustwall-captcha"
path = "src/captcha/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"

# Image Processing & SVG
svg = "0.17"
image = { version = "0.24", optional = true }

# Templating
tera = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = { version = "0.14", optional = true }
toml = { version = "0.8", optional = true }

# Cryptography (for future security features)
sha2 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }

# Network utilities (for future Tor integration)
reqwest = { version = "0.11", optional = true, features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["captcha"]

# Core features
captcha = []
ddos-basic = []
ddos-advanced = ["image"]

# Security modules (planned)
tor-security = ["sha2", "aes"]
anonymity = ["sha2"]
content-security = ["image"]
network-advanced = ["reqwest", "sha2"]
operational = ["config", "toml"]

# Feature bundles
full = [
    "captcha",
    "ddos-advanced",
    "tor-security",
    "anonymity",
    "content-security",
    "network-advanced",
    "operational"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
